Display the menubar correctly on small screens
Changes made:
- hide icons
- added a user/profile submenu
- fix for height when logged in (caused by truncating long GN title)
- layer indicator doesn't need whitespace anymore
- added margin in footer on small screens
- added class `fa-fw` to icon on the navbar

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_variables_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_variables_default.less
@@ -10,7 +10,10 @@
 @gn-background-image: '';
 @gn-background-color: @body-bg;
 
+@dropdown-border: @navbar-default-border;
+
 // menu bar
+@gn-menubar-height: 50px;
 @gn-menubar-background: @navbar-default-bg;
 @gn-menubar-background-active: @navbar-default-link-active-bg;
 @gn-menubar-color: @navbar-default-link-color;
